<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Donde estan mis amigos</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="usuario"> Usuario </string>
    <string name="pass"> Password </string>
    <string name="iniciar"> Iniciar sesión </string>
    <string name="registrar"> Registro </string>
    <string name="usuario_registro"> Usuario (e-mail) </string>
    <string name="registro_title"> Registro de usuario </string>
    <string name="invitar_title"> Invitar a amigo </string>
    <string name="enviarinvit"> Enviar invitación </string>
    <string name="tituloamigos">Amigos</string>
    <string name="btsolicitudes">Solicitudes</string>
    <string name="btagregar">Añadir contacto</string>
    <string name="lbmailfriend"> E-mail del amigo (debe existir) </string>
    <string name="lbinvitaciones"> Estado de las invitaciones </string>
	<string name="lbenviadas"> Invitaciones enviadas </string>
	<string name="lbrecibidas"> Invitaciones recibidas </string>
	<string name="lbalias"> Alias de usuario</string>
	<string name="btaceptar"> Aceptar invitación</string>
	<string name="btrechazar"> Rechazar invitación</string>
	<string name="Aitor">AIzaSyD7dvucvCJvXbQMTiINIA3zYbI32AQYaG8</string>
	<string name="Gonzo">AIzaSyDgxi2Q6SrAqOWbTA2FXPBKlEtParrUwUw</string>
	<string name="btfollowers"> ¿Quién me sigue? </string>
	<string name="bteliminar"> Eliminar seguidor </string>
	<string name="lbfollowers"> Seguidores - ven mi posición</string>
	<integer name="google_play_services_version">4323000</integer>
	
</resources>